--- a/react/package.json
+++ b/react/package.json
@@ -12,9 +12,13 @@
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
-    "react-scripts": "3.3.1"
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
